# atchef

./: .dockerignore  Dockerfile  ROADMAP.md  compose.yml  notes.md
.github/workflows/: docker.yml
atproto-api/: Cargo.toml  README.md
atproto-api/src/: agent.rs  error.rs  lib.rs  session.rs
atproto-api/src/repo/: api.rs  mod.rs  types.rs
atproto-api/src/types/: at_uri.rs  blob.rs  did.rs  mod.rs  tid.rs
atproto-api/src/xrpc/: client.rs  mod.rs
lexicons/eu/atchef/: recipe.json
server/: Cargo.toml
server/src/: blob_cache.rs  db.rs  handlers.rs  main.rs  models.rs  sync.rs  views.rs
server/src/lexicons/: eu.rs  mod.rs  record.rs
server/src/lexicons/eu/: atchef.rs
server/src/lexicons/eu/atchef/: recipe.rs
server/src/models/: author.rs  mod.rs  recipe.rs  user.rs
server/src/oauth/: discovery.rs  dpop.rs  mod.rs  pkce.rs  session.rs  state.rs
vibes/: style.md
